# wisdom_sensor_net

./: .gitignore  .gitmodules  23  Makefile  README.md  SPECS.md  protocol_notes.txt
.old/: Makefile
.old/collector/: CMakeLists.txt  Makefile  gateway.c
.old/collector/src/: collector.c
.old/error/: error_report.h
.old/node/: CMakeLists.txt  node.c
.old/pennybrook/repeater/: CMakeLists.txt  common_config.c  repeater.c
.old/pennybrook/rx/: hw_config.c  pb_rx.c
.old/test/rx/: test_rx.c
.old/test/tx/: test_tx.c
.old/tools/atshell/: modem.h
.old/tools/uart_monitor/: CMakeLists.txt  Makefile  out.txt
common/: common_config.c  common_config.h
docs/: rfm69_specs.md  rudp_protocol.txt
drivers/mcp7940n_rp2040/src/: sht30_rp2040.c
drivers/pcf8523_rp2040/: CMakeLists.txt
drivers/pcf8523_rp2040/src/: date_time.c  date_time.h  pcf8523_definitions.h  pcf8523_generic.c  pcf8523_generic.h  pcf8523_i2c_generic.h  pcf8523_i2c_rp2040.c  pcf8523_rp2040.c  pcf8523_rp2040.h
drivers/rp2x_sim7080g/: CMakeLists.txt  todo.txt
drivers/rp2x_sim7080g/src/: at_definitions.h  at_response_parser.c  atr_buffer.c  (+4 more)
drivers/s35770_rp2x/: CMakeLists.txt
drivers/s35770_rp2x/src/: s35770_rp2x.c  s35770_rp2x.h
drivers/sht30_rp2040/: CMakeLists.txt
drivers/sht30_rp2040/src/: sht30_constants.h  sht30_rp2040.c  sht30_rp2040.h
drivers/sim7080g_pico/: CMakeLists.txt
drivers/sim7080g_pico/src/: command_buffer.c  gateway.c  modem.h  response_parser.c  sensors.c  sensors.h  sim7080g_pico.c  sim7080g_pico.h
drivers/sim7080g_rp2x/: CMakeLists.txt
ds18b20/: CMakeLists.txt  ds18b20.c
error/: error_report.c  error_report.h
examples/cellular/: wisdom_config.cmake  wisdom_import.cmake
examples/driver_interface/: wisdom_config.cmake  wisdom_import.cmake
examples/flash_test/: CMakeLists.txt  memmap_wisdom.ld  wisdom_import.cmake
examples/gateway/: CMakeLists.txt  wisdom_config.cmake  wisdom_import.cmake
examples/gateway_new/: wisdom_config.cmake  wisdom_import.cmake
examples/pcf8523/: CMakeLists.txt  wisdom_config.cmake
examples/print_time/: CMakeLists.txt
examples/rudp_init/: wisdom_config.cmake
examples/s35770_rp2x/: wisdom_config.cmake  wisdom_import.cmake
examples/scheduler/: wisdom_config.cmake  wisdom_import.cmake
examples/sd_card/: wisdom_config.cmake  wisdom_import.cmake
examples/sht30/: wisdom_config.cmake  wisdom_import.cmake
examples/sht30_old/: sht30_constants.h  wisdom_config.cmake
field_tests/gateway/: wisdom_config.cmake  wisdom_import.cmake
field_tests/node/: CMakeLists.txt  Makefile  wisdom_config.cmake  wisdom_import.cmake
gateway/: CMakeLists.txt  Makefile  command_buffer.h  discovery.c  gateway.c  modem.c  modem.h  test.c  wisdom_config.cmake  wisdom_import.cmake
gateway/src/: command_buffer.c  command_buffer.h  gateway.c  modem.c  modem.h  modem_core.c  modem_core.h  response_parser.c  response_parser.h
i2c_sandbox/: wisdom_config.cmake
i2c_sandbox/src/: i2c_template.c
libs/circle_buffer/: CMakeLists.txt
libs/hibernate/: CMakeLists.txt  wisdom_config.cmake  wisdom_import.cmake
libs/hibernate/src/: hibernate.c  hibernate.h  test.c
modules/cellular/: CMakeLists.txt  cellular_config.cmake  cellular_import.cmake
modules/gateway/: CMakeLists.txt  gateway_config.cmake  gateway_import.cmake
modules/gateway/src/: gateway.c  gateway.h  gateway_codes.h  gateway_core.c  gateway_error.c  gateway_error.h  gateway_interface.h  gateway_module.h  gateway_queue.c  gateway_queue.h  gateway_sim7080g.c  gw_core.c  gw_core.h  gw_core_error.c  gw_core_error.h
modules/radio/: CMakeLists.txt  radio.h  radio_config.cmake  radio_error.c  radio_error.h  radio_import.cmake  radio_interface.h  radio_rfm69.c  wisdom_config.cmake
modules/radio/src/: radio_error.c  radio_error.h  radio_interface.h  radio_rfm69.c  template_main.c
modules/scheduler/: CMakeLists.txt  scheduler_config.cmake  scheduler_import.cmake
node/: .node.c.swp  CMakeLists.txt  compile_commands.json  node.c
node/.clangd/index/: node.c.CCE69246F175B117.idx
pennybrook/repeater/: repeater.c
pennybrook/rx/: CMakeLists.txt  pb_rx.c
pennybrook/tx/: CMakeLists.txt  pb_tx.c
rfm69/: .rfm69.c.swp  .rfm69.h.swp  rfm69.c  rfm69.h  rudp.c  rudp.h
rfm69hcw/: rfm69hcw.c  rfm69hcw.h
router/: CMakeLists.txt  router.c
rssi_test/rssi_rx/: CMakeLists.txt  rssi_rx.c
rssi_test/rssi_tx/: CMakeLists.txt  rssi_tx.c
rudp/: CMakeLists.txt  Makefile  packet_buffer.c  rudp.c  rudp.h  wisdom_config.cmake
rudp/common/: CMakeLists.txt  wisdom_import.cmake
rudp/src/: rudp.c  rudp.h  rudp_test.c
sd_test/: CMakeLists.txt  \  hw_config.c  sd_test.c
sensor_interface/: CMakeLists.txt  a.out  test.c
sensor_interface/src/: sensor_headers.h  sensor_interface.c  sensor_interface.h  sensor_type.h  sensor_unpack.h  wisdom_sensors.c  wisdom_sensors.h
sensor_interface/src/sensors/sht30/: sht30_wsi.c  sht30_wsi.h
sensor_interface/src/sensors/test/: test_sensor.c  test_sensor.h
server/: Makefile  server.c
template/: Makefile  wisdom_config.cmake  wisdom_import.cmake
template/common/: CMakeLists.txt
template/src/: sd_config.c  template_main.c
templates/flash_test/: con.fig  wisdom_config.cmake
templates/radio/radio_tx/: CMakeLists.txt  Makefile
templates/radio/radio_tx/src/: radio_tx.c
teros/: teros_11.c
teros_11/: CMakeLists.txt  teros_11.c  teros_11.h
test/: CMakeLists.txt  test_tx.c
test/repeater/: CMakeLists.txt  test_repeat.c
test/rx/: CMakeLists.txt  test_rx.c
test/teros_11_test/: CMakeLists.txt  teros_11_test.c
test/tx/: CMakeLists.txt  test_tx.c
tools/atshell/: CMakeLists.txt  atshell_server.c  modem.c  modem.h
tools/pico_term/: a.out
tools/rtc_init/: Makefile  rtc_init.sh  wisdom_config.cmake  wisdom_import.cmake
tools/sim7080g_repl/: CMakeLists.txt  Makefile  a.out  wisdom_import.cmake
tools/sim7080g_repl/client/: CMakeLists.txt  Makefile
tools/sim7080g_repl/client/src/: repl_client.c
tools/ttc/: CMakeLists.txt  ttc.c
turbidity/: CMakeLists.txt  turbidity.c
uart_test/: .CMakeLists.txt.swp  .uart_test.c.swp  CMakeLists.txt  uart_test.c
(+91 files in other folders)
